# MSAF

./: CMakeLists.txt  readme.md  requirements.txt  run.py
config/: config.yaml  generator_config.yaml  motion_config.yaml
data/G_values/turning_yaw_vel/: G_for_12degps_4mps.txt  G_for_18degps_6mps.txt  G_for_3degps_1mps.txt  G_for_9degps_3mps.txt
data/K_values/turning_yaw_vel/: K_for_12degps_4mps.txt  K_for_18degps_6mps.txt  K_for_3degps_1mps.txt  K_for_9degps_3mps.txt
data/P_values/straight_acc/: P_for_0.2mpss.txt  P_for_0mpss.txt  P_for_1mpss.txt  P_for_2mpss.txt
data/P_values/turning_yaw/: P_for_12degps.txt  P_for_3degps.txt  P_for_6degps.txt  P_for_9degps.txt
data/P_values/turning_yaw_vel/: P_for_12degps_4mps.txt  P_for_18degps_6mps.txt  P_for_3degps_1mps.txt  P_for_9degps_3mps.txt
data/obs_result/: obs_result.txt
data/parse_result/: straight_acc.yaml  straight_vel.yaml  turning_yaw.yaml  turning_yaw_vel.yaml
scripts/: eskf_batch.py  parse_obs_to_yaml.py  plot_k_values.py  plot_radar.py  plot_ref_path.py  plot_spoof_path_straight.py  plot_spoof_path_yaw.py  plot_spoof_path_yaw_vel.py
src/app/: dataStructures.h  main.cpp  main.h  utilityFunctions.cpp  utilityFunctions.h
src/error_state_kalman_filter/: error_state_kalman_filter.cpp  error_state_kalman_filter.h  init_data.cpp  init_data.h
src/injector/: injector.cpp  injector.h
src/motion_data_generator/src/: generator.py  load_data.cpp  load_data.h  param_adapter.py  valid_data.cpp  valid_data.h
src/state_dependency_analyzer/: state_dependency_analyzer.cpp  state_dependency_analyzer.h
(+280 files in other folders)
